# sqrt_decompostition

./: CMakeLists.txt  README.md
benchmarking/: simple.c  sqrt_bench.c
realization/: simple.c  sqrt_r.c
tests/: 1.txt  2.txt  generator_test.py
